# Grupo-huntRED-Chatbot

./: .env-example  .env.example  .gitattributes  .gitignore  ANALISIS_CHATBOTS_ESPECIALIZADOS.md  ANALISIS_CHATBOTS_ESPECIALIZADOS_CORREGIDO.md  ANALISIS_COMPARATIVO_FALTANTES.md  AUDITORIA_COMPLETA_FALTANTES.md  AUDITORIA_CONFIGURACION_APIS.md  BUG_FIXES_REPORT.md  CODIGO_COMPLETADO_FINAL.md  COMMIT_DIA_1_INTEGRACION_CORE.md  COMPARATIVA_MODULOS_COMPLETA.md  CONTRIBUTING.md  CORRECCION_COMPLETA_SISTEMA.py  DEMO_COMPLETE_MEJORADO.md  DEMO_FEEDBACK_CHATBOT.md  DEMO_FEEDBACK_COMPLETO.md  DEPLOYMENT_SUCCESS.md  DESIGN-SYSTEM.md  Dockerfile  ENTREGAS_COMPLETADAS.md  ERRORES_CORREGIDOS.md  ESTADO_ACTUAL_GHUNTRED_V2.md  EXTRACTION_GUIDE.md  FINAL_COMPLETION_STATUS.md  FINAL_SYSTEM_SUMMARY.md  GHUNTRED_V2_SISTEMA_DEFINITIVO.md  GHUNTRED_V2_SYSTEM_OVERVIEW.md  GhuntRED-v2-Implementation-Summary.md  Grupo-huntRED-Chatbot.code-workspace  IMPLEMENTACION_NOTIFICACIONES.md  INSTRUCCIONES_DEPLOY.md  LICENSE  MIGRATION_GUIDE.md  MIGRATION_STRATEGY.md  ML_ANALYSIS_MEJORAS.md  ML_SYSTEM_COMPLETE_SUMMARY.md  MULTI_TENANT_ARCHITECTURE.md  MULTI_TENANT_EXAMPLE.py  (+116 more)
.tmp.driveupload/: 13281  13283  13285  13287  13289  13291  13293  13295  13297  13299  13301  13303  13305  13357  13359  13361  13363  13365  13367  13369  13371  13373  13375  13377  13379  13381  13383  13385  13451  13453  13455  13457  2925  2951
DOCS Idea Payroll/: additional-revenue-streams.md  business-model.md  implementation-guide.md
ai_huntred/: __init__.py  __init__.py.bak.26845  apps.py  asgi.py  celery.py  celery_app.py  celery_config.py  error_handling.py  example_logging.py  logging_config.py  middleware.py  security.py  settings.py  urls.py  wsgi.py
app/: Event.py  __init__.py  __init__.py.bak.26845  admin.py  admin_config.py  analysis.py  apps.py  catalogs.py  celery.py  chatbot.py  contact_import_job.py  dashboard.py  dashboard_utils.py  decorators.py  forms.py  google_calendar.py  gpt.py  import_config.py  import_validator.py  imports.py  lazy_imports.py  linkedin.py  middleware.py  milkyleak.py  ml_model.py  ml_utils.py  models.py  models.py.backup  models.py.bak  models_BAK.py  models_client_feedback.py  models_cultural.py  models_dashboard_share.py  models_kanban.py  models_onboarding.py  module_registry.py  monitoring.py  nlp.py  nlp_utils.py  parser.py  (+16 more)
authentication/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/: Dockerfile  compatibility_layer.py  manage.py  pyproject.toml  requirements.txt
backend/apps/: __init__.py
backend/apps/assessments/: dynamic_assessments.py
backend/apps/background_check/: advanced_verification.py
backend/apps/blockchain/: signature_system.py
backend/apps/bulk_operations/: employee_bulk_loader.py
backend/apps/candidates/: __init__.py  apps.py  models.py
backend/apps/chatbot/: payroll_whatsapp_bot.py  super_chatbot.py
backend/apps/companies/: __init__.py  models.py
backend/apps/core/: __init__.py  frontend_urls.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/models/: assessment.py  company.py  notifications.py  person.py  skills.py  workflow.py
backend/apps/cultural_analysis/: cultural_fit_engine.py
backend/apps/email/: email_processor.py
backend/apps/feedback/: feedback_360.py
backend/apps/gamification/: advanced_gamification.py
backend/apps/hr_management/: overtime_management.py
backend/apps/interviews/: interview_system.py
backend/apps/jobs/: __init__.py  models.py
backend/apps/multichannel/: unified_messaging_engine.py
backend/apps/nlp/: cv_parser.py
backend/apps/notifications/: notification_engine.py
backend/apps/payroll/: payroll_engine.py
backend/apps/recruitment/: process_flow.py
backend/apps/references/: reference_system.py
backend/apps/risk_analysis/: risk_engine.py
backend/apps/scraping/: __init__.py
backend/apps/scraping/scrapers/: linkedin_scraper.py
backend/apps/social_analysis/: social_link_engine.py
backend/apps/tasks/: celery_tasks.py
backend/apps/truthsense/: detection_engine.py
backend/apps/workflows/: advanced_workflows.py
backend/config/: __init__.py  asgi.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py
backend/ml/: __init__.py
backend/ml/aura/: __init__.py  compatibility_analyzer.py  holistic_assessor.py  personality_analyzer.py  vibrational_matcher.py
backend/ml/aura/analyzers/: vibrational_matcher.py
backend/ml/core/: __init__.py  apps.py  exceptions.py  factory.py  metrics.py  optimizers.py  validators.py
backend/ml/genia/: __init__.py  apps.py  experience_analyzer.py  matching_engine.py  resume_analyzer.py  skill_analyzer.py
backend/ml/genia/analyzers/: sentiment_analyzer.py
backend/tasks/: celery.py  ml_tasks.py
backend/templates/frontend/: index.html
chatbot_django/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
database/: complete_schema.sql
deploy/: check_system.py  entrypoint.sh  nginx.conf
docs/: AURA_COMPLETE_GUIDE.md  AURA_DASHBOARD_INTEGRATION.md  Arquitectura.html  CHATBOT_INTEGRATION_GUIDE.md  COMPLETE_SYSTEM_EVALUATION.md  CONSULTANT_DASHBOARD_GUIDE.md  CROSS_SELL_INTEGRATION.md  GLOBAL_SYSTEM_ORCHESTRATION.md  GenIA.html  INTERVIEW_SLOTS_IMPROVEMENTS.md  MARKET_READINESS_REPORT.md  PAYROLL_IMPROVEMENTS_AND_SCRAPING_STATUS.md  PRICING_STRATEGY.md  ROI_CALCULATOR_GUIDE.md  ROI_CALCULATOR_SUMMARY.md  STRATEGIC_INSIGHTS_SYSTEM.md  STRATEGIC_NOTIFICATIONS_SYSTEM.md  SYSTEM_ENHANCEMENT_ROADMAP.md  UNIFIED_SYSTEM_GUIDE.md  architecture.md  billing_system_summary.md  chatbot.html  claude.html  competitive_analysis.md  executive-summary.md  index.html  payment_integration_guide.md  simulator.html  smug.html  technical-documentation.md  unified_pricing_system.md
flutter/: README.md  demo.html  pubspec.yaml
frontend/: vite.config.ts
migrations/: validate_functionality.py
milkyleak/: milkyleak.py
reports/: auditoria_codebase_20250716_085543.json  resumen_auditoria_codebase_20250716_085543.md
sexsi/: admin.py  biometric_auth.py  forms.py  models.py  (+6 more)
(+2639 files in other folders)
